r8 different process